--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ django = "*"
 pylint-django = "*"
 django-crispy-forms = "*"
 pillow = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
