--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,6 @@ dmypy.json
 
 # Custom ignores
 
-/hipo_meal/media/*
-!hipo_meal/media/default_user_male.png
-!hipo_meal/media/default_recipe.png
+media/*
+!media/default_user_male.png
+!media/default_recipe.png
