--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
+aspy.yaml==1.3.0
 astroid==2.2.5
+autopep8==1.4.4
+cfgv==2.0.0
 colorama==0.4.1
 dj-database-url==0.5.0
-Django==2.2.2
+Django==2.2.1
 django-crispy-forms==1.7.2
 django-heroku==0.3.1
 djangorestframework==3.9.4
+entrypoints==0.3
+flake8==3.7.7
 gunicorn==19.9.0
+identify==1.4.4
+importlib-metadata==0.18
 isort==4.3.19
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
+nodeenv==1.3.3
+pep8==1.7.1
 Pillow==6.0.0
+pre-commit==1.17.0
 psycopg2==2.8.2
+pycodestyle==2.5.0
+pyflakes==2.1.1
 pylint==2.3.1
 pylint-django==2.0.9
 pylint-plugin-utils==0.5
 pytz==2019.1
+PyYAML==5.1.1
 six==1.12.0
 sqlparse==0.3.0
+toml==0.10.0
 typed-ast==1.3.5
+virtualenv==16.6.0
 whitenoise==4.1.2
 wrapt==1.11.1
+zipp==0.5.1
